cmake_minimum_required(VERSION 3.10)

# Proje ismi
project(queue)

# C++ standard覺n覺 belirle
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# include dizinini belirt, buraya hpp dosyalar覺n覺 ekleyeceksin
include_directories(${CMAKE_SOURCE_DIR}/include)

add_executable(concatenation
    src/queue.cpp
)
